package com.inf5153.api.daos;

import com.inf5153.api.models.Address;
import org.springframework.stereotype.Service;

@Service
public class AddressDAO extends AbstractDAO<Address,Integer> {
    
}
