package com.inf5153.api.services;

import com.inf5153.api.models.Address;

import org.springframework.stereotype.Service;

@Service
public class AddressService extends AbstractService<Address,Integer> {
    
}
