package com.inf5153.api.services;

import com.inf5153.api.models.Antecedant;

import org.springframework.stereotype.Service;

@Service
public class AntecedantService extends AbstractService<Antecedant,Integer> {

}
